--- a/Lab5/style.css
+++ b/Lab5/style.css
@@ -100,6 +100,12 @@ section#shop{
     flex-wrap: wrap;
     align-content: flex-start;
     justify-content: space-between;
+    align-items: baseline;
+}
+
+#shop > h1{
+    flex-grow: 12;
+    width: 100%;
 }
 
 article.shopItem{
